# kernels_evaluation

./: .gitignore  PROJECT_SUMMARY.md  README.md  README_KERNELS.md  benchmark_results.json  compare_frameworks.py  comparison_report.md  run.sh  run_all_benchmarks.sh  run_all_kernels.sh  technical_analysis.md
artifacts/assembly/: cublas_binary_info.txt  cublas_gemm.s  cutlass_binary_info.txt  tilelang_gemm_1024x512x1024.tl  tilelang_gemm_4096x2048x4096.tl  triton_gemm_4096x2048x4096_dict.ptx
artifacts/binaries/: cutlass_gemm
cublas/: CMakeLists.txt  main_cublas_gemm.cu  run.sh
cutlass/: cutlass_sass.txt  main_cutlass_gemm.cu  run.sh
docs/: all_kernels_comparison_report.md  comparison_report.md  compilation_performance_analysis.md  compile_code_performance_analysis.md  detailed_assembly_performance_analysis.md  detailed_performance_analysis.md  main.tex
frameworks/cublas/: CMakeLists.txt  cublas_softmax.cu  main_cublas_gemm.cu  run.sh
frameworks/cutlass/: CMakeLists.txt  main_cutlass_gemm.cu  run.sh
frameworks/results/: asm_aware_benchmark.json
frameworks/tilelang/: run.sh  tilelang_gemm.py  tilelang_layernorm.py  tilelang_softmax.py
frameworks/triton/: ASM_AWARE_SUMMARY.md  OPTIMIZATION_NOTES.md  PERFORMANCE_VERIFICATION.md  README_ASM_AWARE.md  STATISTICS_GUIDE.md  TESTING_GUIDE.md  VERIFICATION_SUMMARY.md  benchmark_asm_aware.py  matmul_triton_opt.py  run.sh  run_asm_aware_benchmark.sh  test_asm_aware.py  triton_gemm.py  (+3 more)
results/: all_kernels_results.json  benchmark_results.json  compile_analysis_report.json
scripts/: compare_all_kernels.py  compare_frameworks.py  run_all_benchmarks.sh  validate_setup.py
tilelang/: run.sh  tilelang_gemm.py
triton/: run.sh  triton_gemm.py
